# image-classifier-frontend

./: Cargo.toml  README.md  index.html  mockup_backend.py  package-lock.json  package.json
src/: App.js  main.rs
src/components/: ImageSelector.js  ImageViewer.js  alert.rs  file_upload_box.rs  image_analysis_row.rs  image_display.rs  mod.rs  nav.rs
src/components/layout/: column_layout.rs  main_container.rs  mod.rs  row_layout.rs
src/routes/: Home.js
src/views/: image_analysis.rs  mod.rs  not_found.rs  search.rs
