[package]
name = "image-classifier-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
log = "0.4.17"
wasm-logger = "0.2.0"
js-sys = "0.3"
base64 = "0.21.0"
yew-hooks = "0.2.0"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde = { version = "1.0.163", features = ["derive"] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
serde_json = "1.0.96"

[dependencies.web-sys]
version = "0.3"
features = [
    "File", "DragEvent", "DataTransfer",
]
